# videoDownloader

./: .gitignore  README.md  buildozer.spec  list-project-structure.sh  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: android.yml
src/videodownloader/: android_utils.py  downloader.py  main.py  ui.kv
